[metadata]
name = jupyter_accessibility
description =
long_description = file: README.md
long_description_content_type = text/markdown
url =
author =
author_email =
keywords =

[options]
install_requires =
	doit
	pydantic
packages =
	jupyter_accessibility

[options.extras_require]
doc =
	jupyter-book
test =
    hypothesis_jsonschema
	pytest
	pytest-cov
	nbval
	hypothesis
